[project]
name = "wevva"
version = "0.1.1"
description = "Textual TUI for viewing weather via Open-Meteo"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [ { name = "Nick Ferguson", email = "nick.ferguson@ed.ac.uk" } ]
keywords = ["textual", "tui", "weather", "open-meteo", "terminal"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Terminals",
]
dependencies = [
    "httpx>=0.28.1",
    "pycountry>=24.6.1",
    "questionary>=2.1.1",
    "textual>=3.1.0",
    "typer>=0.21.1",
    "wcwidth>=0.2.13",
]

[project.scripts]
wevva = "wevva.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wevva"]

[tool.hatch.build.targets.sdist]
include = ["wevva/**", "README.md", "LICENSE", "pyproject.toml"]
